--- a/phones.html
+++ b/phones.html
@@ -3,7 +3,7 @@
 
 <title>xx.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/main.css">
+<link rel="stylesheet" href="/style.css">
 
 
 <body>
@@ -31,7 +31,7 @@
 
 
 <main class="container">
-<link rel="stylesheet" href="/main.css">
+<link rel="stylesheet" href="/style.css">
   <!-- Left Column -->
   <div class="xx-container">
 
