--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <title>xx.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="style.css">
 <body>
   <!-- Right-sided navbar links. Hide them on small screens -->
   <div class="xx-right xx-hide-small">
