--- a/about.html
+++ b/about.html
@@ -3,10 +3,15 @@
   <head>
 <title>xx.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="style.css">
   </head>  
   <body>
     <h2>About Us</h2>
+      <div class="xx-right xx-hide-small">
+    <a href="home.html" class="xx-bar-item xx-button">Home</a>
+    <a href="about.html" class="xx-bar-item xx-button">About</a>
+    <a href="contact.html" class="xx-bar-item xx-button">Contact</a>
+  </div>
     <p> Back Benchers Tech Kit was established in 2000 to make sure that world and it's customers get the chance to keep up with technology. </p>
     <p> For your ultimate online shopping experience Back Benchers Tech Kit is your to go place </p>
 </body>
