--- a/Laptops.html
+++ b/Laptops.html
@@ -11,7 +11,7 @@
 
   <!-- Right-sided navbar links. Hide them on small screens -->
   <div class="xx-right xx-hide-small">
-    <a href="home.html" class="xx-bar-item xx-button">Home</a>
+    <a href="index.html" class="xx-bar-item xx-button">Home</a>
     <a href="about.html" class="xx-bar-item xx-button">About</a>
     <a href="contact.html" class="xx-bar-item xx-button">Contact</a>
   </div>
