--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <body>
     <h2>About Us</h2>
       <div class="xx-right xx-hide-small">
-    <a href="home.html" class="xx-bar-item xx-button">Home</a>
+    <a href="index.html" class="xx-bar-item xx-button">Home</a>
     <a href="about.html" class="xx-bar-item xx-button">About</a>
     <a href="contact.html" class="xx-bar-item xx-button">Contact</a>
   </div>
