--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 <body>
   <!-- Right-sided navbar links. Hide them on small screens -->
   <div class="xx-right xx-hide-small">
-    <a href="home.html" class="xx-bar-item xx-button">Home</a>
+    <a href="index.html" class="xx-bar-item xx-button">Home</a>
     <a href="about.html" class="xx-bar-item xx-button">About</a>
 
   </div>
