--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <title>xx.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/main.css">
+<link rel="stylesheet" href="/style.css">
 
 
 <body>
