--- a/contact.html
+++ b/contact.html
@@ -12,16 +12,15 @@
   </div>
 <div class="xx-container xx-yellow">
 <div class="xx-container xx-teal">
-<h1>BackBenchers Fruits & Vegetables</h1>
+<h1>BackBenchers Tech Kit</h1>
 
 <hr>
 
   <!-- Contact Section -->
   <div class="xx-container xx-padding-64" id="contact">
-    <h1>Contact</h1><br>
-    <p>We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.</p>
+    <h1>Contact</h1><br><p>
     <p class="xx-text-blue-grey xx-large"><b>For pick ups, 1290 4th Avenue, 0152 Pretoria</b></p>
-    <p>You can also contact us by phone 015 223 4543 or email fruitsandveg@backbenchers.com, or you can send us a message here:</p>
+    <p>You can also contact us by phone 015 223 4543 or email Techkitg@backbenchers.com, or you can send us a message here:</p>
     <form action="/action_page.php" target="_blank">
       <p><input class="xx-input xx-padding-16" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="xx-input xx-padding-16" type="number" placeholder="Quantity" required name="People"></p>
