--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
   <!-- Contact Section -->
   <div class="xx-container xx-padding-64" id="contact">
     <h1>Contact</h1><br><p>
+    <p> Let's get in touch</p>
     <p class="xx-text-blue-grey xx-large"><b>For pick ups, 1290 4th Avenue, 0152 Pretoria</b></p>
     <p>You can also contact us by phone 015 223 4543 or email Techkitg@backbenchers.com, or you can send us a message here:</p>
     <form action="/action_page.php" target="_blank">
