--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="xx-third">
 <div class="xx-card">
 <img src="img\laptop1.png" style="width:100%">
-<a href="laptops.html"/a>
+<a href="Laptops.html"/a>
 <div class="xx-container">
 <h4>LAPTOPS</h4>
 </div>
